changed ID that was field on the html to time

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- Example of a past time block. The "past" class adds a gray background color. -->
         <div id="hour-9" class="row time-block past">
             <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-            <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-            <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <textarea class="col-8 col-md-10 description" rows="3" id="field1"></textarea>
+            <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn1">
                 <i class="fas fa-save" aria-hidden="true"></i>
             </button>
         </div>
@@ -44,8 +44,8 @@
         <!-- Example of a present time block. The "present" class adds a red background color. -->
         <div id="hour-10" class="row time-block present">
             <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-            <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-            <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <textarea class="col-8 col-md-10 description" rows="3" id="field2"> </textarea>
+            <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn2">
                 <i class="fas fa-save" aria-hidden="true"></i>
             </button>
         </div>
@@ -53,8 +53,8 @@
         <!-- Example of a future time block. The "future" class adds a green background color. -->
         <div id="hour-11" class="row time-block future">
             <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-            <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-            <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <textarea class="col-8 col-md-10 description" rows="3" id="field3"> </textarea>
+            <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn3">
                 <i class="fas fa-save" aria-hidden="true"></i>
             </button>
         </div>
@@ -62,8 +62,8 @@
 
     <div id="hour-12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field4"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn4">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
@@ -71,8 +71,8 @@
 
     <div id="hour-13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field5"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn5">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
@@ -80,8 +80,8 @@
 
     <div id="hour-14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field6"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn6">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
@@ -89,8 +89,8 @@
 
     <div id="hour-15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field7"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn7">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
@@ -98,8 +98,8 @@
 
     <div id="hour-16" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field8"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn8">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
@@ -107,8 +107,8 @@
 
     <div id="hour-17" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3" id="field9" id="time9"></textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn9">
             <i class="fas fa-save" aria-hidden="true"></i>
         </button>
     </div>
