tried to center the first three divs and keep them from being out of line but failed miserably

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 
         <!-- Example of a past time block. The "past" class adds a gray background color. -->
-        <div id="hour-9" class="row time-block past">
-            <div class="col-2 col-md-1 hour text-center py-3" class="time1" id="time">9AM</div>
+        <div id="hour-9" class="row time-block past center ">
+            <div class="col-2 col-md-1 hour text-center py-3" id="time2" class="time">9AM</div>
             <textarea class="col-8 col-md-10 description" rows="3" id="field1"></textarea>
             <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn1">
                 <i class="fas fa-save" aria-hidden="true"></i>
@@ -34,7 +34,7 @@
 
         <!-- Example of a present time block. The "present" class adds a red background color. -->
         <div id="hour-10" class="row time-block present">
-            <div class="col-2 col-md-1 hour text-center py-3" class="time2" id="time">10AM</div>
+            <div class="col-2 col-md-1 hour text-center py-3" id="time2" class="time">10AM</div>
             <textarea class="col-8 col-md-10 description" rows="3" id="field2"> </textarea>
             <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn2">
                 <i class="fas fa-save" aria-hidden="true"></i>
@@ -43,7 +43,7 @@
 
         <!-- Example of a future time block. The "future" class adds a green background color. -->
         <div id="hour-11" class="row time-block future">
-            <div class="col-2 col-md-1 hour text-center py-3" class="time3" id="time">11AM</div>
+            <div class="col-2 col-md-1 hour text-center py-3" id="time3" class="time">11AM</div>
             <textarea class="col-8 col-md-10 description" rows="3" id="field3"> </textarea>
             <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn3">
                 <i class="fas fa-save" aria-hidden="true"></i>
@@ -51,8 +51,8 @@
         </div>
     </div>
 
-    <div id="hour-12" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time4" id="time">12PM</div>
+    <div id="hour-12" class="row time-block future ">
+        <div class="col-2 col-md-1 hour text-center py-3" id="time4" class="time">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field4"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn4">
             <i class="fas fa-save" aria-hidden="true"></i>
@@ -61,7 +61,7 @@
     </div>
 
     <div id="hour-13" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time5" id="time">1PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3" id="time5" class="time">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field5"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn5">
             <i class="fas fa-save" aria-hidden="true"></i>
@@ -70,7 +70,7 @@
     </div>
 
     <div id="hour-14" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time6" id="time">2PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3" id="time6" class="time">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field6"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn6">
             <i class="fas fa-save" aria-hidden="true"></i>
@@ -79,7 +79,7 @@
     </div>
 
     <div id="hour-15" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time7" id="time">3PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3" id="time7" class="time">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field7"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn7">
             <i class="fas fa-save" aria-hidden="true"></i>
@@ -88,7 +88,7 @@
     </div>
 
     <div id="hour-16" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time8" id="time">4PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3" id="time8" class="time">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field8"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn8">
             <i class="fas fa-save" aria-hidden="true"></i>
@@ -97,7 +97,7 @@
     </div>
 
     <div id="hour-17" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3" class="time9" id="time">5PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3" id="time9" class="time">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" id="field9" id="time9"></textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="saveBtn9">
             <i class="fas fa-save" aria-hidden="true"></i>
